--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
+  <meta name="description" content="Chúc mừng sinh nhật em">
   <title>Happy Birthday!</title>
 
   <link rel="stylesheet" href="styles/flexbox-center-container.css" media="all">
